tests/ui/async-await/issue-101715.stderr
error[E0277]: `()` is not a future
  --> $DIR/issue-101715.rs:11:9
   |
LL |         .await
   |         ^^^^^^
   |         |
   |         `()` is not a future
   |         help: remove the `.await`
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
   = note: required for `()` to implement `IntoFuture`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
